total merge 파일 생성 코드

--- a/kimujung/make_data.ipynb
+++ b/kimujung/make_data.ipynb
@@ -33,21 +33,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = 'D:\\\\study\\\\sknetworks\\\\team_project\\\\sk_2nd\\\\data\\\\'\n",
+    "data_dir = 'C:\\\\KIMUJUNG\\\\team_project\\\\data\\\\'\n",
     "df_members = pd.read_csv(data_dir + 'members_v3.csv')\n",
     "train_v1 = pd.read_csv(data_dir + 'train.csv')\n",
     "train_v2 = pd.read_csv(data_dir + 'train_v2.csv')\n",
     "transactions_v1 = pd.read_csv(data_dir + 'transactions.csv')\n",
-    "transactions_v2 = pd.read_csv(data_dir + 'transactions_v2.csv')"
+    "transactions_v2 = pd.read_csv(data_dir + 'transactions_v2.csv')\n",
+    "unique_label = pd.read_csv(data_dir + 'members_encoded.csv')\n",
+    "log_data = pd.read_csv(data_dir + 'user_logs_summary.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +122,7 @@
        "4  +++snpr7pmobhLKUgSHTv/mpkqgBT0tQJ0zQj6qKrqc=         0      v2"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +218,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +229,425 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>msno</th>\n",
+       "      <th>msno_encoded</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Rb9UwLQTrxzBVwCB6+bCcSQWZ9JiNLC9dXtM1oEsZA8=</td>\n",
+       "      <td>3132477</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>+tJonkh+O1CA796Fm5X60UMOtB6POHAwPjbTRVl/EuU=</td>\n",
+       "      <td>94959</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           msno  msno_encoded\n",
+       "0  Rb9UwLQTrxzBVwCB6+bCcSQWZ9JiNLC9dXtM1oEsZA8=       3132477\n",
+       "1  +tJonkh+O1CA796Fm5X60UMOtB6POHAwPjbTRVl/EuU=         94959"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_label.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 기존 데이터프레임에 msno_num 추가\n",
+    "train_en = train.merge(unique_label, on='msno', how='inner').drop(columns=['msno'])\n",
+    "members_en = df_members.merge(unique_label, on='msno', how='inner').drop(columns=['msno'])\n",
+    "df_transaction_en = df_transaction.merge(unique_label, on='msno', how='inner').drop(columns=['msno'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>is_churn</th>\n",
+       "      <th>is_back</th>\n",
+       "      <th>msno_encoded</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   is_churn  is_back  msno_encoded\n",
+       "0         0        0            12\n",
+       "1         0        0            13"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_en.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((961431, 3), (6769473, 6))"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_en.shape, members_en.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kkbox_transaction_merge = pd.merge(train_en, df_transaction_en, on='msno_encoded', how='inner',)\n",
+    "kkbox_merge = pd.merge(members_en, kkbox_transaction_merge, on='msno_encoded', how='inner')\n",
+    "kkbox_merge['msno'] = kkbox_merge['msno_encoded']\n",
+    "kkbox_merge = kkbox_merge[['msno', 'city', 'bd', 'gender', 'registered_via', 'registration_init_time',\n",
+    "        'is_churn', 'is_back', 'payment_plan_sum',\n",
+    "        'plan_list_price', 'actual_amount_paid', 'discount_rate',\n",
+    "        'is_auto_renew', 'membership_expire_date', 'is_cancel', 'transaction_count']]\n",
+    "kkbox_merge.to_csv(data_dir + \"kkbox_data_not_log.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((961431, 16),\n",
+       " Index(['msno', 'city', 'bd', 'gender', 'registered_via',\n",
+       "        'registration_init_time', 'is_churn', 'is_back', 'payment_plan_sum',\n",
+       "        'plan_list_price', 'actual_amount_paid', 'discount_rate',\n",
+       "        'is_auto_renew', 'membership_expire_date', 'is_cancel',\n",
+       "        'transaction_count'],\n",
+       "       dtype='object'))"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kkbox_merge.shape, kkbox_merge.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>msno</th>\n",
+       "      <th>city</th>\n",
+       "      <th>bd</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>registered_via</th>\n",
+       "      <th>registration_init_time</th>\n",
+       "      <th>is_churn</th>\n",
+       "      <th>is_back</th>\n",
+       "      <th>payment_plan_sum</th>\n",
+       "      <th>plan_list_price</th>\n",
+       "      <th>actual_amount_paid</th>\n",
+       "      <th>discount_rate</th>\n",
+       "      <th>is_auto_renew</th>\n",
+       "      <th>membership_expire_date</th>\n",
+       "      <th>is_cancel</th>\n",
+       "      <th>transaction_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>94959</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7</td>\n",
+       "      <td>20110914</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>870</td>\n",
+       "      <td>3981</td>\n",
+       "      <td>4130</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20170428</td>\n",
+       "      <td>0.033333</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6597367</td>\n",
+       "      <td>4</td>\n",
+       "      <td>30</td>\n",
+       "      <td>male</td>\n",
+       "      <td>9</td>\n",
+       "      <td>20110916</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>603</td>\n",
+       "      <td>2980</td>\n",
+       "      <td>3129</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20170517</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      msno  city  bd gender  registered_via  registration_init_time  is_churn  \\\n",
+       "0    94959     1   0    NaN               7                20110914         0   \n",
+       "1  6597367     4  30   male               9                20110916         0   \n",
+       "\n",
+       "   is_back  payment_plan_sum  plan_list_price  actual_amount_paid  \\\n",
+       "0        0               870             3981                4130   \n",
+       "1        0               603             2980                3129   \n",
+       "\n",
+       "   discount_rate  is_auto_renew  membership_expire_date  is_cancel  \\\n",
+       "0            0.0            1.0                20170428   0.033333   \n",
+       "1            0.0            1.0                20170517   0.000000   \n",
+       "\n",
+       "   transaction_count  \n",
+       "0                 30  \n",
+       "1                 21  "
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kkbox_merge.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>msno</th>\n",
+       "      <th>num_25</th>\n",
+       "      <th>num_50</th>\n",
+       "      <th>num_75</th>\n",
+       "      <th>num_985</th>\n",
+       "      <th>num_100</th>\n",
+       "      <th>num_unq</th>\n",
+       "      <th>total_secs</th>\n",
+       "      <th>log_start</th>\n",
+       "      <th>log_end</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6.0</td>\n",
+       "      <td>903</td>\n",
+       "      <td>260</td>\n",
+       "      <td>237</td>\n",
+       "      <td>200</td>\n",
+       "      <td>59826</td>\n",
+       "      <td>54134</td>\n",
+       "      <td>1.478275e+07</td>\n",
+       "      <td>20150101</td>\n",
+       "      <td>20170331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>12.0</td>\n",
+       "      <td>763</td>\n",
+       "      <td>379</td>\n",
+       "      <td>359</td>\n",
+       "      <td>648</td>\n",
+       "      <td>2820</td>\n",
+       "      <td>3690</td>\n",
+       "      <td>9.124106e+05</td>\n",
+       "      <td>20161116</td>\n",
+       "      <td>20170331</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   msno  num_25  num_50  num_75  num_985  num_100  num_unq    total_secs  \\\n",
+       "0   6.0     903     260     237      200    59826    54134  1.478275e+07   \n",
+       "1  12.0     763     379     359      648     2820     3690  9.124106e+05   \n",
+       "\n",
+       "   log_start   log_end  \n",
+       "0   20150101  20170331  \n",
+       "1   20161116  20170331  "
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "log_data.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_data['msno'] = log_data['msno'].astype('int')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kkbox_merge_final = pd.merge(kkbox_merge, log_data, on='msno', how='inner')\n",
+    "kkbox_merge_final.to_csv(data_dir + \"kkbox_data_total.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -270,50 +690,50 @@
     }
    ],
    "source": [
-    "# msno 고유값 추출\n",
-    "unique_msno = pd.concat([\n",
-    "    df_members[['msno']],\n",
-    "    train[['msno']],\n",
-    "    df_transaction[['msno']]\n",
-    "]).drop_duplicates().reset_index(drop=True)\n",
+    "# # msno 고유값 추출\n",
+    "# unique_msno = pd.concat([\n",
+    "#     df_members[['msno']],\n",
+    "#     train[['msno']],\n",
+    "#     df_transaction[['msno']]\n",
+    "# ]).drop_duplicates().reset_index(drop=True)\n",
     "\n",
-    "# msno에 대한 고유 번호 할당\n",
-    "unique_msno['msno_num'] = range(1, len(unique_msno) + 1)\n",
+    "# # msno에 대한 고유 번호 할당\n",
+    "# unique_msno['msno_num'] = range(1, len(unique_msno) + 1)\n",
     "\n",
-    "# 기존 데이터프레임에 msno_num 추가\n",
-    "train = train.merge(unique_msno, on='msno', how='left').drop(columns=['msno'])\n",
-    "members = df_members.merge(unique_msno, on='msno', how='left').drop(columns=['msno'])\n",
-    "df_transaction = df_transaction.merge(unique_msno, on='msno', how='left').drop(columns=['msno'])\n",
+    "# # 기존 데이터프레임에 msno_num 추가\n",
+    "# train = train.merge(unique_msno, on='msno', how='left').drop(columns=['msno'])\n",
+    "# members = df_members.merge(unique_msno, on='msno', how='left').drop(columns=['msno'])\n",
+    "# df_transaction = df_transaction.merge(unique_msno, on='msno', how='left').drop(columns=['msno'])\n",
     "\n",
-    "# 필요한 컬럼만 선택\n",
-    "train = train[['msno_num', 'is_churn', 'is_back']]\n",
-    "members = members[['msno_num', 'city', 'bd', 'gender', 'registered_via', 'registration_init_time']]\n",
-    "df_transaction = df_transaction[['msno_num', 'payment_plan_sum', 'plan_list_price', 'actual_amount_paid',\n",
-    "       'discount_rate', 'is_auto_renew', 'membership_expire_date', 'is_cancel',\n",
-    "       'transaction_count']]\n",
+    "# # 필요한 컬럼만 선택\n",
+    "# train = train[['msno_num', 'is_churn', 'is_back']]\n",
+    "# members = members[['msno_num', 'city', 'bd', 'gender', 'registered_via', 'registration_init_time']]\n",
+    "# df_transaction = df_transaction[['msno_num', 'payment_plan_sum', 'plan_list_price', 'actual_amount_paid',\n",
+    "#        'discount_rate', 'is_auto_renew', 'membership_expire_date', 'is_cancel',\n",
+    "#        'transaction_count']]\n",
     "\n",
-    "# 변환된 데이터 확인\n",
-    "print(train.head())\n",
-    "print(members.head())\n",
-    "print(df_transaction.head())\n",
-    "# print(user_logs.head())\n"
+    "# # 변환된 데이터 확인\n",
+    "# print(train.head())\n",
+    "# print(members.head())\n",
+    "# print(df_transaction.head())\n",
+    "# # print(user_logs.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kkbox_transaction_merge = pd.merge(train, df_transaction, on='msno_num', how='inner',)\n",
-    "kkbox_merge = pd.merge(members, kkbox_transaction_merge, on='msno_num', how='inner')\n",
-    "kkbox_merge.to_csv(data_dir + \"kkbox_data_not_log.csv\", index=False)"
+    "# kkbox_transaction_merge = pd.merge(train, df_transaction, on='msno_num', how='inner',)\n",
+    "# kkbox_merge = pd.merge(members, kkbox_transaction_merge, on='msno_num', how='inner')\n",
+    "# kkbox_merge.to_csv(data_dir + \"kkbox_data_not_log.csv\", index=False)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "pystudy_env",
    "language": "python",
    "name": "python3"
   },
@@ -327,7 +747,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
