--- a/kimujung/EDA.ipynb
+++ b/kimujung/EDA.ipynb
@@ -1787,6 +1787,169 @@
     "plt.tight_layout(rect=[0, 0, 1, 0.96])\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = df[~df['gender'].isna()]\n",
+    "# test_data = df[df['gender'].isna()]\n",
+    "# train_input = train_data.drop('gender',axis=1)\n",
+    "# train_label = train_data['gender']\n",
+    "\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "std_scaler = StandardScaler()\n",
+    "train_scaled = std_scaler.fit_transform(train_data.drop('gender',axis=1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "train_input, test_input, train_label, test_label = \\\n",
+    "    train_test_split(train_scaled, train_data['gender'], test_size=0.3, stratify=train_data['gender'], random_state=42) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5172990469340046"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "kn = KNeighborsClassifier()\n",
+    "\n",
+    "kn.fit(train_input, train_label)\n",
+    "kn.score(test_input, test_label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.5734394808737905, 0.5468530839777018)"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "# dt_clf = DecisionTreeClassifier(random_state=0)\n",
+    "dt_clf = DecisionTreeClassifier(random_state=0, max_depth=10)   # max_depth : 가지치기 (최대 깊이 지정)\n",
+    "dt_clf.fit(train_input, train_label)\n",
+    "\n",
+    "dt_clf.score(train_input, train_label), dt_clf.score(test_input, test_label)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "학습 점수: 0.6052490626673809\n",
+      "테스트 평가 점수: 0.5588113648624348\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "rf_clf = RandomForestClassifier(n_estimators=100, max_depth=10, random_state=0)\n",
+    "# 학습\n",
+    "rf_clf.fit(train_input, train_label)\n",
+    "\n",
+    "# 예측 및 평가\n",
+    "y_pred_train = rf_clf.predict(train_input)\n",
+    "acc_score_train = accuracy_score(train_label, y_pred_train)\n",
+    "print('학습 점수:', acc_score_train)\n",
+    "\n",
+    "y_pred_test = rf_clf.predict(test_input)\n",
+    "acc_score_test = accuracy_score(test_label, y_pred_test)\n",
+    "print('테스트 평가 점수:', acc_score_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.6280147815331024\n",
+      "0.5700773242222622\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.62      0.75      0.68    136257\n",
+      "         1.0       0.64      0.49      0.56    123256\n",
+      "\n",
+      "    accuracy                           0.63    259513\n",
+      "   macro avg       0.63      0.62      0.62    259513\n",
+      "weighted avg       0.63      0.63      0.62    259513\n",
+      "\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "         0.0       0.57      0.69      0.63     58396\n",
+      "         1.0       0.56      0.43      0.49     52824\n",
+      "\n",
+      "    accuracy                           0.57    111220\n",
+      "   macro avg       0.57      0.56      0.56    111220\n",
+      "weighted avg       0.57      0.57      0.56    111220\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "from xgboost import XGBClassifier     # xgboost에서는 sklearn과 비슷한 api제공\n",
+    "\n",
+    "xgb_clf = XGBClassifier(\n",
+    "    n_estimators=1000,\n",
+    "    max_depth=7,\n",
+    "    learning_rate=0.01,\n",
+    "    random_state=0\n",
+    ")\n",
+    "\n",
+    "xgb_clf.fit(train_input, train_label)\n",
+    "\n",
+    "y_pred_train = xgb_clf.predict(train_input)\n",
+    "y_pred_test = xgb_clf.predict(test_input)\n",
+    "\n",
+    "print(accuracy_score(train_label, y_pred_train))\n",
+    "print(accuracy_score(test_label, y_pred_test))\n",
+    "print(classification_report(train_label, y_pred_train))\n",
+    "print(classification_report(test_label, y_pred_test))"
+   ]
   }
  ],
  "metadata": {
