--- a/dain/preprocessing_total.ipynb
+++ b/dain/preprocessing_total.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,13 +15,15 @@
     "import seaborn as sns\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
     "# 경고 메시지 숨기기\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -263,21 +265,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 성별 인코딩"
+    "### 성별 NAN값 제거 후 인코딩"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_filtered = df[df['gender'].notna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def encode_gender(df):\n",
     "    # 성별 인코딩: M -> 1, F -> 0, nan -> -1 (또는 원하는 값으로 변경)\n",
-    "    df['gender_encoded'] = df['gender'].map({'M': 1, 'F': 0})\n",
-    "    \n",
-    "    # nan 값을 -1로 처리 (혹은 다른 값으로 처리)\n",
-    "    df['gender_encoded'] = df['gender_encoded'].fillna(-1)  # nan을 -1로 처리\n",
+    "    df['gender_encoded'] = df['gender'].map({'male': 1, 'female': 0})\n",
     "    df = df.drop(columns=[\"gender\"])\n",
     "    \n",
     "    return df"
@@ -285,11 +293,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df['gender'].isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = encode_gender(df)"
+    "# df = encode_gender(df_filtered)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0           male\n",
+       "1           male\n",
+       "2           male\n",
+       "4         female\n",
+       "5         female\n",
+       "           ...  \n",
+       "856540      male\n",
+       "856547      male\n",
+       "856548    female\n",
+       "856559      male\n",
+       "856564    female\n",
+       "Name: gender, Length: 368210, dtype: object"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"gender\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 나이 전처리"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df[\"bd\"] = df[\"bd\"].abs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28.0"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# # 0인 값이 많아서 Age 중앙값이 0으로 나옴. 10보다 큰 Age 값의 중앙값\n",
+    "\n",
+    "# median_df_bd = df[df[\"bd\"] > 11][\"bd\"].median()\n",
+    "# median_df_bd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df[\"bd\"] = df[\"bd\"].apply(lambda x: x if (x != 0) and (x < 11 or x > 100) else np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df_filtered = df[df['bd'].notna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([      nan, 1.090e+02, 1.170e+02, 1.050e+02, 1.000e+00, 1.060e+02,\n",
+       "       5.000e+00, 2.200e+02, 1.020e+02, 4.000e+00, 1.030e+02, 1.037e+03,\n",
+       "       1.370e+02, 3.000e+00, 1.032e+03, 1.110e+02, 1.070e+02, 1.160e+02,\n",
+       "       1.000e+01, 9.460e+02, 8.000e+00, 1.150e+02, 6.000e+00, 1.040e+02,\n",
+       "       9.360e+02, 1.100e+02, 1.043e+03, 7.000e+00, 9.510e+02, 1.260e+02,\n",
+       "       9.300e+02, 1.034e+03, 1.026e+03, 1.120e+02, 1.053e+03, 7.780e+02,\n",
+       "       9.000e+00, 9.500e+02, 1.017e+03, 1.030e+03, 1.036e+03, 1.040e+03,\n",
+       "       1.530e+02, 1.048e+03, 7.430e+02, 1.031e+03, 1.190e+02, 1.051e+03,\n",
+       "       1.049e+03, 1.380e+02, 2.000e+00, 1.029e+03, 9.480e+02, 1.440e+02,\n",
+       "       1.010e+02, 1.052e+03, 1.310e+02, 8.230e+02, 3.190e+02, 9.390e+02,\n",
+       "       9.470e+02, 9.410e+02, 3.400e+02, 9.310e+02, 1.033e+03, 9.330e+02,\n",
+       "       1.022e+03, 1.220e+02, 1.600e+02, 5.190e+02, 1.390e+02, 1.009e+03,\n",
+       "       1.970e+02, 9.640e+02, 1.042e+03, 1.130e+02, 8.370e+02, 3.200e+02,\n",
+       "       7.860e+02, 1.035e+03, 8.210e+02, 1.970e+03, 1.140e+02, 1.290e+02,\n",
+       "       1.280e+02, 1.200e+02, 1.041e+03, 9.340e+02, 3.210e+02, 1.330e+02,\n",
+       "       1.028e+03, 8.100e+02, 1.421e+03, 9.440e+02, 1.008e+03, 1.320e+02,\n",
+       "       1.300e+02, 1.780e+02, 1.038e+03, 9.420e+02, 9.280e+02, 3.152e+03])"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# df['bd'].unique()"
    ]
   },
   {
@@ -301,10 +453,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# X_train, X_test, y_train, y_test = train_test_split(train_data.drop('gender',axis=1), train_data['gender'], test_size=0.3, random_state=42)\n",
+    "\n",
+    "# std_scaler = StandardScaler()\n",
+    "# train_scaled = std_scaler.fit_transform(X_train)\n",
+    "# test_scaled = std_scaler.transform(X_test)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -315,11 +473,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"./data/data_total_split_datetime\")"
+    "df_filtered.to_csv(\"./data/data_total_split_datetime.csv\")"
    ]
   },
   {
