--- a/kimujung/EDA.ipynb
+++ b/kimujung/EDA.ipynb
@@ -2633,7 +2633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2642,7 +2642,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.impute import KNNImputer\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import mean_absolute_error\n",
+    "from sklearn.metrics import mean_absolute_error, r2_score\n",
     "\n",
     "# 📌 1️⃣ 데이터 불러오기 (df 가정)\n",
     "# df = pd.read_csv(\"your_data.csv\")\n",
@@ -2723,9 +2723,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAE (결측치 대체 후): 13.4388\n",
+      "MAE (결측치 대체 후): -0.5080\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.experimental import enable_iterative_imputer\n",
     "from sklearn.impute import IterativeImputer\n",
@@ -2739,7 +2748,9 @@
     "# 📌 9️⃣ 결측치 대체 후 성능 평가 (MAE)\n",
     "y_test_pred = iter_imputer.transform(X_test)[:, 0]  # 첫 번째 열이 target column이라고 가정\n",
     "mae = mean_absolute_error(y_test, y_test_pred)\n",
-    "print(f\"MAE (결측치 대체 후): {mae:.4f}\")"
+    "r2 = r2_score(y_test, y_test_pred)\n",
+    "print(f\"MAE (결측치 대체 후): {mae:.4f}\")\n",
+    "print(f\"MAE (결측치 대체 후): {r2:.4f}\")"
    ]
   }
  ],
