--- a/kimujung/EDA.ipynb
+++ b/kimujung/EDA.ipynb
@@ -361,6 +361,145 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>msno</th>\n",
+       "      <th>city</th>\n",
+       "      <th>bd</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>registered_via</th>\n",
+       "      <th>registration_init_time</th>\n",
+       "      <th>is_churn</th>\n",
+       "      <th>is_back</th>\n",
+       "      <th>payment_plan_sum</th>\n",
+       "      <th>plan_list_price</th>\n",
+       "      <th>actual_amount_paid</th>\n",
+       "      <th>discount_rate</th>\n",
+       "      <th>is_auto_renew</th>\n",
+       "      <th>membership_expire_date</th>\n",
+       "      <th>is_cancel</th>\n",
+       "      <th>transaction_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>94959</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7</td>\n",
+       "      <td>20110914</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>870</td>\n",
+       "      <td>3981</td>\n",
+       "      <td>4130</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20170428</td>\n",
+       "      <td>0.033333</td>\n",
+       "      <td>30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6597367</td>\n",
+       "      <td>4</td>\n",
+       "      <td>30</td>\n",
+       "      <td>male</td>\n",
+       "      <td>9</td>\n",
+       "      <td>20110916</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>603</td>\n",
+       "      <td>2980</td>\n",
+       "      <td>3129</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>20170517</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3629318</td>\n",
+       "      <td>5</td>\n",
+       "      <td>34</td>\n",
+       "      <td>male</td>\n",
+       "      <td>9</td>\n",
+       "      <td>20110916</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>360</td>\n",
+       "      <td>1072</td>\n",
+       "      <td>1072</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>20170823</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      msno  city  bd gender  registered_via  registration_init_time  is_churn  \\\n",
+       "0    94959     1   0    NaN               7                20110914         0   \n",
+       "1  6597367     4  30   male               9                20110916         0   \n",
+       "2  3629318     5  34   male               9                20110916         1   \n",
+       "\n",
+       "   is_back  payment_plan_sum  plan_list_price  actual_amount_paid  \\\n",
+       "0        0               870             3981                4130   \n",
+       "1        0               603             2980                3129   \n",
+       "2        0               360             1072                1072   \n",
+       "\n",
+       "   discount_rate  is_auto_renew  membership_expire_date  is_cancel  \\\n",
+       "0            0.0            1.0                20170428   0.033333   \n",
+       "1            0.0            1.0                20170517   0.000000   \n",
+       "2            0.0            0.0                20170823   0.000000   \n",
+       "\n",
+       "   transaction_count  \n",
+       "0                 30  \n",
+       "1                 21  \n",
+       "2                  2  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_dir = 'D:\\\\study\\\\sknetworks\\\\team_project\\\\sk_2nd\\\\data\\\\'\n",
+    "df = pd.read_csv(data_dir + \"kkbox_data_total.csv\")\n",
+    "df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
    "outputs": [
@@ -1687,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1701,9 +1840,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'num_25'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\Users\\kwj\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[1;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\\\_libs\\\\hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'num_25'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m aa \u001b[38;5;241m=\u001b[39m df[df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnum_25\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m20000\u001b[39m]\u001b[38;5;241m.\u001b[39mindex\n\u001b[0;32m      2\u001b[0m df\u001b[38;5;241m.\u001b[39mdrop(aa, inplace\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[0;32m      3\u001b[0m bb \u001b[38;5;241m=\u001b[39m df[df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnum_50\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m>\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m30000\u001b[39m]\u001b[38;5;241m.\u001b[39mindex\n",
+      "File \u001b[1;32mc:\\Users\\kwj\\anaconda3\\Lib\\site-packages\\pandas\\core\\frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mget_loc(key)\n\u001b[0;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[1;32mc:\\Users\\kwj\\anaconda3\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3810\u001b[0m     ):\n\u001b[0;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'num_25'"
+     ]
+    }
+   ],
    "source": [
     "aa = df[df['num_25'] >= 20000].index\n",
     "df.drop(aa, inplace=True)\n",
@@ -1744,7 +1905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1797,7 +1958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1812,7 +1973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1821,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1831,12 +1992,11 @@
        "       'registration_init_time', 'is_churn', 'is_back', 'payment_plan_sum',\n",
        "       'plan_list_price', 'actual_amount_paid', 'discount_rate',\n",
        "       'is_auto_renew', 'membership_expire_date', 'is_cancel',\n",
-       "       'transaction_count', 'num_25', 'num_50', 'num_75', 'num_985', 'num_100',\n",
-       "       'num_unq', 'total_secs', 'log_start', 'log_end'],\n",
+       "       'transaction_count'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1847,18 +2007,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "KNN 모델 정확도: 0.5262452796259666\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_data = df[~df['gender'].isna()]\n",
     "X_train, X_test, y_train, y_test = train_test_split(train_data.drop('gender',axis=1), train_data['gender'], test_size=0.3, random_state=42)\n",
@@ -1867,7 +2018,7 @@
     "train_scaled = std_scaler.fit_transform(X_train)\n",
     "test_scaled = std_scaler.transform(X_test)\n",
     "# KNN 분류 모델 훈련\n",
-    "knn = KNeighborsClassifier(n_neighbors=5000)\n",
+    "knn = KNeighborsClassifier(n_neighbors=1)\n",
     "knn.fit(X_train, y_train)\n",
     "\n",
     "# df_fill = df.copy()\n",
@@ -2756,7 +2907,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pystudy_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -2770,7 +2921,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
