--- a/jaehyeok/jaehyeok.ipynb
+++ b/jaehyeok/jaehyeok.ipynb
@@ -1908,12 +1908,112 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8dd9dd4c",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# 결측치 이상치 제거 "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "bcce8dcb",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.read_csv('./data/data_total_split_datetime.csv')\n",
+    "\n",
+    "df = df.drop(['Unnamed: 0','Unnamed: 0.1'], axis=1)\n",
+    "df.describe()\n",
+    "df.to_csv('./data/data_total_split_non_index.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "9b20ee3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('./data/data_total_split_datetime.csv')\n",
+    "df = df.drop(['Unnamed: 0.1', 'Unnamed: 0'], axis=1)\n",
+    "df.to_csv('./data/data_total_split_no_index.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "6d462323",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 216 candidates, totalling 648 fits\n",
+      "Best Parameters: {'bootstrap': False, 'max_depth': 10, 'min_samples_leaf': 1, 'min_samples_split': 5, 'n_estimators': 50}\n",
+      "Accuracy: 0.8962\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.91      0.96      0.94        83\n",
+      "           1       0.83      0.65      0.73        23\n",
+      "\n",
+      "    accuracy                           0.90       106\n",
+      "   macro avg       0.87      0.81      0.83       106\n",
+      "weighted avg       0.89      0.90      0.89       106\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report\n",
+    "\n",
+    "# CSV 파일 로드\n",
+    "df = pd.read_csv('./data/data_total_split_no_index.csv')\n",
+    "\n",
+    "# 특성과 라벨 분리\n",
+    "X = df.drop(columns=['is_churn','gender'])  # is_churn을 제외한 나머지를 특성으로 사용\n",
+    "y = df['is_churn']  # 타겟(라벨)\n",
+    "\n",
+    "# 학습 데이터와 테스트 데이터 분할 (8:2)\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
+    "\n",
+    "# 랜덤 포레스트 모델 초기화\n",
+    "rf = RandomForestClassifier(random_state=42)\n",
+    "\n",
+    "# 하이퍼파라미터 후보 설정\n",
+    "param_grid = {\n",
+    "    'n_estimators': [50, 100, 200],  # 트리 개수\n",
+    "    'max_depth': [10, 20, 30, None],  # 트리 깊이\n",
+    "    'min_samples_split': [2, 5, 10],  # 노드 분할 최소 샘플 수\n",
+    "    'min_samples_leaf': [1, 2, 4],  # 리프 노드 최소 샘플 수\n",
+    "    'bootstrap': [True, False]  # 부트스트래핑 사용 여부\n",
+    "}\n",
+    "\n",
+    "# GridSearchCV를 사용하여 최적 하이퍼파라미터 탐색 (교차 검증: 3-fold)\n",
+    "grid_search = GridSearchCV(rf, param_grid, cv=3, scoring='accuracy', n_jobs=-1, verbose=2)\n",
+    "grid_search.fit(X_train, y_train)\n",
+    "\n",
+    "# 최적 모델로 예측 수행\n",
+    "best_rf = grid_search.best_estimator_\n",
+    "y_pred = best_rf.predict(X_test)\n",
+    "\n",
+    "# 성능 평가\n",
+    "accuracy = accuracy_score(y_test, y_pred)\n",
+    "report = classification_report(y_test, y_pred)\n",
+    "\n",
+    "# 결과 출력\n",
+    "print(f'Best Parameters: {grid_search.best_params_}')\n",
+    "print(f'Accuracy: {accuracy:.4f}')\n",
+    "print('Classification Report:')\n",
+    "print(report)\n"
+   ]
   }
  ],
  "metadata": {
