--- a/kimujung/EDA.ipynb
+++ b/kimujung/EDA.ipynb
@@ -2907,7 +2907,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "pystudy_env",
    "language": "python",
    "name": "python3"
   },
@@ -2921,7 +2921,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
